--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="stylesheet.css" type="stylesheet">
+    <link src="stylesheet.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
